[gd_scene load_steps=5 format=3 uid="uid://cknitxc0inc2n"]

[ext_resource type="Script" uid="uid://c1k7rxdxqvgjo" path="res://scenes/NPCs/npc_father.gd" id="1_61kqs"]

[sub_resource type="BoxMesh" id="BoxMesh_oma66"]

[sub_resource type="BoxShape3D" id="BoxShape3D_61kqs"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_h2jl1"]
radius = 3.0

[node name="NPC_Father" type="CharacterBody3D"]
script = ExtResource("1_61kqs")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_oma66")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_61kqs")

[node name="Interaction" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Interaction"]
shape = SubResource("CylinderShape3D_h2jl1")

[connection signal="body_entered" from="Interaction" to="." method="_on_interaction_body_entered"]
[connection signal="body_exited" from="Interaction" to="." method="_on_interaction_body_exited"]
